--- a/src/App.css
+++ b/src/App.css
@@ -8,10 +8,11 @@
 
 .header {
     color: #f8f9fa;
+    text-transform: uppercase;
     background: linear-gradient(
     130deg,
     rgba(73, 145, 85, 1) 59%,
-    rgba(90, 144, 67, 0.9962359943977591) 100%
+    rgba(90, 144, 67, 0.884) 100%
   );
 }
 
@@ -20,7 +21,7 @@
     background: linear-gradient(
     100deg,
     rgba(73, 145, 85, 1) 59%,
-    rgba(90, 144, 67, 0.9962359943977591) 100%
+    rgba(90, 144, 67, 0.884) 100%
   );
 }
 
@@ -36,4 +37,9 @@
 a {
     text-decoration: none;
     color: green;
+}
+
+.header--icon{
+  color: #f8F9Fa;
+  padding: 0 1rem;
 }
